Removed surefire plugin config